--- a/app/views/workallocation/pages/wa-PA-00321-2018.html
+++ b/app/views/workallocation/pages/wa-PA-00321-2018.html
@@ -41,7 +41,7 @@ Case details
       </li>
       <li class="govuk-tabs__list-item">
         <a class="govuk-tabs__tab" href="#">
-          Roles / access
+          Roles and access
         </a>
       </li>
       <li class="govuk-tabs__list-item">
