--- a/app/views/workallocation/pages/wa-PA-00467-2017-trac-case.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-trac-case.html
@@ -18,7 +18,7 @@ Case details
                 We’ve sent the requester an email informing them they now have access to the case.
               </p> -->
               <p class="govuk-body">
-                Their details will appear under the role and access tab.
+                You can find the details in the ‘Roles and access’ tab.
               </p>
               <div class="govuk-button-group">
               {{ govukButton({
