--- a/app/views/workallocation/pages/wa-2018.html
+++ b/app/views/workallocation/pages/wa-2018.html
@@ -18,7 +18,7 @@ Case details
   </svg>
   <div class="hmcts-banner__message">
     <span class="hmcts-banner__assistive">information</span>
-    Challenged access.<br>This case is located outside your working region. Access to this case is logged for auditing purposes.
+    You have been given challenged access to this case until midnight tonight. Access to this case is logged for auditing purposes.
   </div>
 </div>
 <div class="govuk-grid-row" style="width:1220px; margin-left: 0px;">
@@ -66,7 +66,7 @@ Case details
       </li>
       <li class="govuk-tabs__list-item">
         <a class="govuk-tabs__tab" href="#">
-          Roles / access
+          Roles and access
         </a>
       </li>
       <li class="govuk-tabs__list-item govuk-tabs__list-item--selected">
