--- a/app/views/workallocation/pages/wa-PA-00467-2017-ar-fpj.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-ar-fpj.html
@@ -46,7 +46,7 @@ Case details
       </li>
        <li class="govuk-tabs__list-item--selected">
         <a class="govuk-tabs__tab" href="wa-PA-00467-2017-ar">
-          Roles / access
+          Roles and access
         </a>
       </li>
       <li class="govuk-tabs__list-item">
@@ -92,7 +92,7 @@ Case details
     </ul>
     <div class="govuk-tabs__panel" id="event" style="display: padding: 0px; border-bottom: 0px; border-right: 0px; border-left: 0px;">
       <div>
-  <h2 class="govuk-heading-l">Role / access</h2>
+  <h2 class="govuk-heading-l">Roles and access</h2>
         <h2 class="govuk-heading-m">Judiciary</h2>
         <table class="govuk-table ">
         <thead class="govuk-table__head">
