--- a/app/views/workallocation/pages/wa-PA-00467-2017-t.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-t.html
@@ -41,7 +41,7 @@ Case details
       </li>
       <li class="govuk-tabs__list-item">
         <a class="govuk-tabs__tab" href="wa-PA-00467-2017-ar">
-          Roles / access
+          Roles and access
         </a>
       </li>
       <li class="govuk-tabs__list-item">
