--- a/app/views/workallocation/pages/wa-PA-00467-2017-tr-case.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-tr-case.html
@@ -32,9 +32,9 @@ Case details
                 <td class="govuk-table__cell">DD/MM/YYYY</td>
               </tr>
               <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header" style="width: 220px;">Purpose for access</th>
+                <th scope="row" class="govuk-table__header" style="width: 220px;">Reason for case access</th>
                 <td class="govuk-table__cell">
-Purpose A          </tr>
+To view details of the other case linked to the parties/family on my current case.          </tr>
             </tbody>
           </table>
         </div>
