--- a/app/views/workallocation/pages/wa-PA-00467-2017-tu.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-tu.html
@@ -49,7 +49,7 @@ You've unassigned yourself a task.
       </li>
       <li class="govuk-tabs__list-item">
         <a class="govuk-tabs__tab" href="PA-00467-2017-ar">
-          Roles / access
+          Roles and access
         </a>
       </li>
       <li class="govuk-tabs__list-item">
@@ -123,7 +123,7 @@ Review specific access request</strong> <span class="hmcts-badge_right">{{govukT
               </div>
               <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
-                  Purpose for access
+                  Reason for case access
                 </dt>
                 <dd class="govuk-summary-list__value">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ultrices enim in egestas porttitor. Vivamus iaculis ex eu dolor feugiat elementum. Nunc id laoreet elit. In hac habitasse platea dictumst
