--- a/app/views/caseaccess/testing.html
+++ b/app/views/caseaccess/testing.html
@@ -21,24 +21,24 @@ GOV.UK Prototype Kit
       <div>
         <div style="width: 600px;">
           <h2 class="govuk-heading-l">Staff IAC</h2>
-          <h2 class="govuk-heading-m">(USER) Challenged access request</h2>
+          <h2 class="govuk-heading-m">(IAC USER) Challenged access request</h2>
           <h3 class="govuk-heading-s">Scenario A - Search for and Challenged Access to case</h3>
-       <p><a target="_blank" href="/caseaccess/pages/IAC-results?usertype=staff&">Search - entry</a><br></p>
-          <!--   <p><a target="_blank" href="/caseaccess/pages/mywork-c?usertype=staff&">My work - entry</a><br>Case reference search from header</p> -->
+      <!--    <p><a target="_blank" href="/caseaccess/pages/IAC-results?usertype=staff&">Search - entry</a><br></p>
+          <p><a target="_blank" href="/caseaccess/pages/mywork-c?usertype=staff&">My work - entry</a><br>Case reference search from header</p> -->
           <p><a target="_blank" href="/caseaccess/pages/IAC?usertype=staff&">Case details</a><br>Challanged access - Flow request</br></p>
-          <p><a target="_blank" href="/caseaccess/pages/IAC-request?usertype=staff&">Request access</a><br>Challanged access - Flow request</br></p>
+        <!--  <p><a target="_blank" href="/caseaccess/pages/IAC-request?usertype=staff&">Request access</a><br>Challanged access - Flow request</br></p>
           <p><a target="_blank" href="/caseaccess/pages/IAC-confirmation?usertype=staff&">Confirmation</a><br>Challanged access - Flow request</br></p>
           <p><a target="_blank" href="/caseaccess/pages/IAC-a?usertype=staff&">Case details</a><br>Challanged access - Flow request</br></p>
-          <p><a target="_blank" href="/caseaccess/pages/myaccess-IAC-r?usertype=staff&">My access</a><br>Challanged access - shown in situe</br></p>
+          <p><a target="_blank" href="/caseaccess/pages/myaccess-IAC-r?usertype=staff&">My access</a><br>Challanged access - shown in situe</br></p> -->
 
           <!-- SECTION BREAK -->
 
-          <h2 class="govuk-heading-m">(USER) Specifc access request</h2>
+          <h2 class="govuk-heading-m">(IAC USER) Specifc access request</h2>
           <h3 class="govuk-heading-s">Scenario B - Search for and Request Specific Access to case</h3>
-          <p><a target="_blank" href="/caseaccess/pages/IAC-results-s2?usertype=staff&">Search - entry</a><br></p>
-        <!--  <p><a target="_blank" href="/caseaccess/pages/mywork?usertype=staff&">My work - entry</a><br>Case reference search from header</p> -->
+        <!--   <p><a target="_blank" href="/caseaccess/pages/IAC-results-s2?usertype=staff&">Search - entry</a><br></p>
+         <p><a target="_blank" href="/caseaccess/pages/mywork?usertype=staff&">My work - entry</a><br>Case reference search from header</p> -->
           <p><a target="_blank" href="/caseaccess/pages/IACs?usertype=staff&">Case details</a><br>Specifc access - Flow request</br></p>
-          <p><a target="_blank" href="/caseaccess/pages/IACs-request?usertype=staff&">Request access</a><br>Specifc access - Flow request</br></p>
+      <!--    <p><a target="_blank" href="/caseaccess/pages/IACs-request?usertype=staff&">Request access</a><br>Specifc access - Flow request</br></p>
           <p><a target="_blank" href="/caseaccess/pages/IACs-confirmation?usertype=staff&">Confirmation</a><br>Specifc access - Flow request</br></p>
           <p><a target="_blank" href="/caseaccess/pages/myaccess-IACs-p?usertype=staff&">My access</a><br>Pending Specifc access - Flow request</p>
         <!--  <p><a target="_blank" href="/caseaccess/pages/myaccess-povd?usertype=staff&">View access request</a><br>Pending Specifc access - Flow request</p>
@@ -47,10 +47,10 @@ GOV.UK Prototype Kit
           <!-- SECTION BREAK -->
 
 
-          <h2 class="govuk-heading-m">(APPROVER) Approve Specifc access request <br> from AVAILABLE TASKS</h2>
+          <h2 class="govuk-heading-m">(IAC APPROVER) Approve Specifc access request <br> from AVAILABLE TASKS</h2>
           <h3 class="govuk-heading-s">Scenario C - Part 1a - Grant request Specific Access to case</h3>
           <p><a target="_blank" href="/caseaccess/pages/available-tasks-s2?usertype=staff&">Available tasks</a><br>Specifc access - Flow approve</p>
-          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-t?usertype=staff&">Active tasks</a><br>Assign to me - Specifc access - Flow approve</p>
+      <!--    <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-t?usertype=staff&">Active tasks</a><br>Assign to me - Specifc access - Flow approve</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ta?usertype=staff&">Assigned</a><br>Specifc access - Flow approve</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr-case?usertype=staff&"">Review specific access request</a><br>Specifc access - Flow approve</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tra-case?usertype=staff&">Grant duration of case access
@@ -58,7 +58,7 @@ GOV.UK Prototype Kit
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trac-case?usertype=staff&">Access approved</a><br>Specifc access - Flow approve</p>
 
           <!-- SECTION BREAK -->
-
+<!--
           <h2 class="govuk-heading-m">(APPROVER) Approve Specifc access request <br> from INSIDE A CASE</h2>
           <h3 class="govuk-heading-s">Scenario C - Part 1b - Grant request Specific Access to case</h3>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-a?usertype=staff&">Case view - Overview</a><br>Specifc access - Flow approve</p>
@@ -74,24 +74,24 @@ GOV.UK Prototype Kit
 
           <!-- SECTION BREAK -->
 
-          <h2 class="govuk-heading-m">(USER) Specifc access approved</h2>
+          <h2 class="govuk-heading-m">(IAC USER) Specifc access approved</h2>
           <h3 class="govuk-heading-s"> Scenario C - Part 2 - Granted (approved)</h3>
           <p><a target="_blank" href="/caseaccess/pages/myaccess-tc?usertype=staff&">My access</a><br>Specifc access - Flow request</p>
-          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ara?usertype=staff&">Case view - Role / access</a><br>Specifc access - Flow request approved</p>
+      <!--     <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ara?usertype=staff&">Case view - Role / access</a><br>Specifc access - Flow request approved</p>
 
           <!-- SECTION BREAK -->
 
-          <h2 class="govuk-heading-m">(APPROVER) Reject Specifc access request<br> from AVAILABE TASKS</h2>
+          <h2 class="govuk-heading-m">(IAC APPROVER) Reject Specifc access request<br> from AVAILABE TASKS</h2>
           <h3 class="govuk-heading-s">Scenario D (a) - Reject specific access to case </h3>
           <p><a target="_blank" href="/caseaccess/pages/available-tasks-s2?usertype=staff&">Available tasks</a><br>Specifc access - Flow rejected</p>
-          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr?usertype=staff&">Review specific access request</a><br>Specifc access - Flow rejected</p>
+      <!--    <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr?usertype=staff&">Review specific access request</a><br>Specifc access - Flow rejected</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trr?usertype=staff&">Reject specific access request
             </a><br>Specifc access - Flow rejected</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trrc?usertype=staff&">Confirmation - Task Rejected</a><br>Specifc access - Flow rejected</p>
           <!--    <p><a target="_blank" href="/caseaccess/pages/email-rejected">Email notifcation - Task Rejected</a></p> -->
 
           <!-- SECTION BREAK -->
-
+<!--
           <h2 class="govuk-heading-m">(APPROVER) Reject Specifc access request <br> from INSIDE A CASE</h2>
           <h3 class="govuk-heading-s">Scenario D (b) - Reject specific access to case</h3>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-a?usertype=staff&">Case view - Overview</a><br>Specifc access - Flow reject</p>
@@ -105,15 +105,15 @@ GOV.UK Prototype Kit
 
           <!-- SECTION BREAK -->
 
-          <h2 class="govuk-heading-m">(USER) Specifc access rejected</h2>
+          <h2 class="govuk-heading-m">(IAC USER) Specifc access rejected</h2>
           <h3 class="govuk-heading-s"> Scenario D (a + b) - Part 2 - Granted (Rejected)</h3>
           <p><a target="_blank" href="/caseaccess/pages/myaccess-tcr?usertype=staff&">My access</a><br>Specifc access - Flow rejected</p>
-          <p><a target="_blank" href="/caseaccess/pages/myaccess-tcrvd?usertype=staff&">View details</a><br>Specifc access - Flow rejected</p>
+      <!--      <p><a target="_blank" href="/caseaccess/pages/myaccess-tcrvd?usertype=staff&">View details</a><br>Specifc access - Flow rejected</p>
     <!--      <p><a target="_blank" href="#">Re-request access</a><br>Specifc access - Flow rejected</p> -->
         <!--  <p><a target="_blank" href="/caseaccess/pages/myaccess-tcrd?usertype=staff&">Delete request</a><br>Specifc access - Flow rejected</p>
 -->
           <!-- SECTION BREAK -->
-
+<!--
           <h3 class="govuk-heading-s">Scenario E - Booking UI</h3>
           <p><a target="_blank" href="/caseaccess/pages/booking?usertype=staff&">Booking UI</a><br>Select type of access</br></p>
           <p><a target="_blank" href="/caseaccess/pages/booking-location?usertype=staff&">Booking UI - location</a><br>Select location- Subject to change</br></p>
