--- a/app/views/caseaccess/pages/IAC-request.html
+++ b/app/views/caseaccess/pages/IAC-request.html
@@ -78,7 +78,7 @@ You’ll be given access to the case until midnight tonight.
   text: "Submit",
   href: "IAC-confirmation",
   classes: "govuk-!-margin-right-3"
-}) }}<p><a class="govuk-body" href="IAC-results">Cancel</a></p>
+}) }}<p><a class="govuk-body" href="/searchcases/pages/results">Cancel</a></p>
 <!--
 {{ govukButton({
   text: "Cancel",
