--- a/app/views/caseaccess/pages/IACs.html
+++ b/app/views/caseaccess/pages/IACs.html
@@ -26,7 +26,7 @@ This case has specific access.<br>This means it requires authorisation. If you r
     <div class="govuk-grid-row" style="width:1220px; margin-left: 0px;">
       <div class="" style="display: flex; justify-content: space-between; ">
         <div style="display: flex; ">
-            <h1 class="govuk-heading-xl">PA/00467/2017</h1>
+            <h1 class="govuk-heading-xl">IAC Specific</h1>
           </div>
         </div>
       </div>
@@ -76,56 +76,7 @@ This case has specific access.<br>This means it requires authorisation. If you r
           </dd>
         </div>
       </dl>
-<!--
-      <dl class="govuk-summary-list">
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key summary-key">
-            Case name
-          </dt>
-          <dd class="govuk-summary-list__value">
-          Amelia Chu
-          </dd>
-        </div>
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key summary-key">
-            Staus
-          </dt>
-          <dd class="govuk-summary-list__value">
-            Pre hearing
-          </dd>
-        </div>
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key summary-key">
-          Location
-          </dt>
-          <dd class="govuk-summary-list__value">
-            London
-          </dd>
-        </div>
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key summary-key">
-            Judge
-          </dt>
-          <dd class="govuk-summary-list__value">
-            Judge Warden
-          </dd>
-        </div>
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key summary-key">
-            Next hearing
-          </dt>
-          <dd class="govuk-summary-list__value">
-          </dd>
-        </div>  <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key summary-key">
-              Access
-            </dt>
-            <dd class="govuk-summary-list__value">
-              Specific
-            </dd>
-          </div>
-      </dl>
-      -->
+
     </div>
     {{ govukButton({
   text: "Request access",
@@ -139,5 +90,5 @@ This case has specific access.<br>This means it requires authorisation. If you r
   classes: "govuk-button--secondary"
 }) }} -->
   </form>
-    <a class="govuk-body" href="IAC-results-s2">Cancel</a>
+    <a class="govuk-body" href="/searchcases/pages/results">Cancel</a>
 {% endblock %}
