--- a/app/views/caseaccess/pages/IAC.html
+++ b/app/views/caseaccess/pages/IAC.html
@@ -27,7 +27,7 @@ Case details
     <div class="govuk-grid-row" style="width:1220px; margin-left: 0px;">
       <div class="" style="display: flex; justify-content: space-between; ">
         <div style="display: flex; ">
-            <h1 class="govuk-heading-xl">IAC</h1>
+            <h1 class="govuk-heading-xl">IAC Challenge</h1>
           </div>
         </div>
       </div>
@@ -144,5 +144,5 @@ Case details
 -->
 
   </form>
-  <a class="govuk-body" href="IAC-results">Cancel</a>
+  <a class="govuk-body" href="/searchcases/pages/results">Cancel</a>
 {% endblock %}
