--- a/app/views/caseaccess/pages/SSCS-request.html
+++ b/app/views/caseaccess/pages/SSCS-request.html
@@ -75,7 +75,7 @@ Case details
 
     {{ govukButton({
   text: "Submit",
-  href: "IACs-confirmation",
+  href: "SSCS-confirmation",
   classes: "govuk-!-margin-right-3"
 }) }}
 
