--- a/app/views/caseaccess/pages/SSCSs.html
+++ b/app/views/caseaccess/pages/SSCSs.html
@@ -14,20 +14,19 @@ Case details
         autocomplete="off"
         action="PA-00321-2018-request">
     <div>
-    <div class="hmcts-banner">
-      <svg class="hmcts-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25">
-        <path d="M13.7,18.5h-2.4v-2.4h2.4V18.5z M12.5,13.7c-0.7,0-1.2-0.5-1.2-1.2V7.7c0-0.7,0.5-1.2,1.2-1.2s1.2,0.5,1.2,1.2v4.8
-      C13.7,13.2,13.2,13.7,12.5,13.7z M12.5,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.1,0.5,12.5,0.5z" />
-      </svg>
-      <div class="hmcts-banner__message">
-        <span class="hmcts-banner__assistive">information</span>
-        This case has challenged access.<br>This is because the case is outside your work area. If you request access to the case, it will be logged for auditing purposes.
-      </div>
-    </div>
+      <div class="hmcts-banner">
+        <svg class="hmcts-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25">
+          <path d="M13.7,18.5h-2.4v-2.4h2.4V18.5z M12.5,13.7c-0.7,0-1.2-0.5-1.2-1.2V7.7c0-0.7,0.5-1.2,1.2-1.2s1.2,0.5,1.2,1.2v4.8
+        C13.7,13.2,13.2,13.7,12.5,13.7z M12.5,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.1,0.5,12.5,0.5z" />
+        </svg>
+        <div class="hmcts-banner__message">
+          <span class="hmcts-banner__assistive">information</span>
+This case has specific access.<br>This means it requires authorisation. If you request access to the case, it will be logged for auditing purposes.</div>
+</div>
     <div class="govuk-grid-row" style="width:1220px; margin-left: 0px;">
       <div class="" style="display: flex; justify-content: space-between; ">
         <div style="display: flex; ">
-            <h1 class="govuk-heading-xl">SSCS Challenged</h1>
+            <h1 class="govuk-heading-xl">IAC Specific</h1>
           </div>
         </div>
       </div>
@@ -38,7 +37,7 @@ Case details
             Case name
           </dt>
           <dd class="govuk-summary-list__value">
-            Robert Saddlebrook
+            Amelia Chu
           </dd>
         </div>
         <div class="govuk-summary-list__row">
@@ -49,6 +48,7 @@ Case details
             	Immigration and Asylum
           </dd>
         </div>
+
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key summary-key">
             State
@@ -57,22 +57,22 @@ Case details
             Appeal submitted
           </dd>
         </div>
+
+
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key summary-key">
             Court or hearing centre
           </dt>
           <dd class="govuk-summary-list__value">
-            Manchester Civil Justice Centre
+              City of London Magistrates' Court
           </dd>
         </div>
-
-
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key summary-key">
             Access
           </dt>
           <dd class="govuk-summary-list__value">
-            Challenged
+            Specific
           </dd>
         </div>
       </dl>
@@ -80,7 +80,7 @@ Case details
     </div>
     {{ govukButton({
   text: "Request access",
-  href: "SSCS-request",
+  href: "SSCSs-request",
   classes: "govuk-!-margin-right-3"
 }) }}
 <!--
