states for testing and sharon

--- a/app/views/searchcases/index.html
+++ b/app/views/searchcases/index.html
@@ -14,32 +14,41 @@
         </h1>
 
 
-        <h2 class="govuk-heading-m">User testing - 31 March 2021</h2>
+        <h2 class="govuk-heading-m">User testing - Starting 31 March 2021</h2>
         <div style="display: flex; margin-top: 10px;">
 
             <div style="width: 300px;">
 
                 <h2 class="govuk-heading-s">Immigration and Asylum</h2>
-                <p><a  href="/searchcases/pages/startsearch?usertype=staff&">Search cases</a></p>
+                <p><a  href="/searchcases/pages/startsearch?usertype=staff&">Scenario 1</a></p>
+                <p><a  href="/searchcases/pages/startsearch?usertype=staff&">Scenario 2</a></p>
 
-                <p><a  href="/searchcases/pages/noresults.html">No results</a></p>
-                <p><a  href="/searchcases/pages/results?&usertype=staff&results=one&">One results</a></p>
-                <p><a  href="/searchcases/pages/results?usertype=staff&results=three&">Three results</a></p>
-                <p><a  href="/searchcases/pages/results?usertype=staff&results=many&">140 results</a></p>
-                <p><a  href="/searchcases/pages/toomanyresults.html">Too many results</a></p>
+
             </div>
 
             <div>
                 <h2 class="govuk-heading-s">Social Security and Child Support</h2>
-                <!-- <p><a  href="/searchcases/pages/results?results=many&usertype=staff&">Many results</a></p>  -->
+                <p><a  href="/searchcases/pages/startsearch?usertype=staff&">Scenario 1</a></p>
             </div>
 
         </div>
 
 
+        <div style=" margin-top: 100px;">
+            <h2 class="govuk-heading-m">Other links</h2>
 
+            <p><a  href="/searchcases/pages/results?usertype=judiciary&results=challengedandspecific&">Judiciary &nbsp;-&nbsp; Results &nbsp;-&nbsp; Challenged and specific access</a></p>
 
-        <div style="display: flex; margin-top: 180px;">
+            <p><a  href="/searchcases/pages/noresults.html">No results</a></p>
+            <p><a  href="/searchcases/pages/results?&usertype=staff&results=one&">One results</a></p>
+            <p><a  href="/searchcases/pages/results?usertype=staff&results=three&">Three results</a></p>
+            <p><a  href="/searchcases/pages/results?usertype=staff&results=many&">140 results</a></p>
+            <p><a  href="/searchcases/pages/toomanyresults.html">Too many results</a></p>
+            <p><a  href="/caseaccess/pages/restricted?usertype=staff&.html">Restricted case</a></p>
+
+        </div>
+
+        <div style="display: flex; margin-top: 80px;">
 
             <div style="width: 250px;">
                 <h2 class="govuk-heading-m">Judiciary</h2>
